package edu.iuh.fit.Bai4;

// ==================== DECORATOR PATTERN ====================
// Component interface - Thành phần sản phẩm
public interface ProductComponent {
    String getDescription();
    double getCost();
}

